Configuration tests have been added

--- a/conf/languages/lang_en.yaml
+++ b/conf/languages/lang_en.yaml
@@ -1,5 +1,5 @@
-name : "en"
 fullName : "English"
+alias : "en"
 dateFormat : "MM/dd/yyyy"
 locale : "en_US"
 username : "Username"
@@ -16,7 +16,7 @@ hello : "Hello"
 welcome : "Welcome"
 pebutraHome : "Home"
 version : "Version"
-addIncomeOutcome : "Add Income/Outcome"
+addIncomeOutcome : "Add Income/Outcome" 
 createYourOwnAccount : "Create Your Own Account"
 forgotMyPassword : "I forgot my password"
 name: "Name"
