Changing the system language dynamically added to the login page

--- a/conf/languages/lang_en.yaml
+++ b/conf/languages/lang_en.yaml
@@ -1,15 +1,14 @@
+# Global configuration
 fullName : "English"
 alias : "en"
 dateFormat : "MM/dd/yyyy"
 locale : "en_US"
 username : "Username"
 password : "Password"
-login : "Login"
 exit : "Exit"
 close : "Close"
-languageAbbrv : "en"
 language : "Language"
-unableToLogin : "Unable to login! Username or password is incorrect."
+systemLanguage : "System Language"
 error : "Error"
 info : "Information"
 hello : "Hello"
@@ -17,15 +16,23 @@ welcome : "Welcome"
 pebutraHome : "Home"
 version : "Version"
 addIncomeOutcome : "Add Income/Outcome" 
-createYourOwnAccount : "Create Your Own Account"
-forgotMyPassword : "I forgot my password"
 name: "Name"
 surname : "Surname"
 emailAddress : "E-Mail Address"
+
+# Login properties
+login : "Login"
+unableToLogin : "Unable to login! Username or password is incorrect."
+forgotMyPassword : "I forgot my password"
 addUser : "Add User"
 addUserDescription : "In order to manage your budget, Pebutra requires you to create your own account. By creating your account, You can easily start managing your budget!"
 addUserSuccessful : "${username} is successfully added to the system. Now, You can start managing your budget!"
 addUserFailed : "Adding ${username} failed!"
+hitYourUsername : "Hit your username!"
+saveUsername : "Save my username after log in"
+createYourOwnAccount : "Create one!"
+dontHaveAnAccount : "Don't you have an account?"
+loginPageTitle : "Pebutra, Your Personal Budget Tracker! | Login"
 
 # Validation Properties
 val_EmailAddressNotValid : "${emailAddress} is not a valid e-mail address."
