--- a/conf/languages/lang_tr.yaml
+++ b/conf/languages/lang_tr.yaml
@@ -1,15 +1,12 @@
+# Global configuration
 fullName : "Türkçe"
 alias : "tr"
 dateFormat : "dd.MM.yyyy"
 locale : "tr_TR"
-username : "Kullanıcı Adı"
-password : "Parola"
-login : "Giriş Yap"
 exit : "Çıkış"
 close : "Kapat"
-languageAbbrv : "tr"
 language : "Dil"
-unableToLogin : "Giriş Başarısız! Kullanıcı Adı veya Parola yanlış."
+systemLanguage : "Sistem Dili"
 error : "Hata"
 info : "Bilgi"
 hello : "Merhaba"
@@ -17,15 +14,25 @@ welcome : "Hoşgeldiniz"
 pebutraHome : "Ana Ekran"
 version : "Sürüm"
 addIncomeOutcome : "Gelir/Gider Ekle"
-createYourOwnAccount : "Kendi hesabını oluştur"
-forgotMyPassword : "Şifremi Unuttum"
+username : "Kullanıcı Adı"
+password : "Parola"
 name: "İsim"
 surname : "Soyisim"
 emailAddress : "E-Posta Addresi"
+
+# Login properties
+login : "Giriş Yap"
+unableToLogin : "Giriş Başarısız! Kullanıcı Adı veya Parola yanlış."
+forgotMyPassword : "Şifremi Unuttum"
 addUser : "Kullanıcı Ekle"
 addUserDescription : "Bütçenizin yönetimi için Pebutra sizden bir hesap oluşturmanızı ister. Hesabınızı oluşturarak hemen bütcenizi yönetmeye başlayabilirsiniz!"
 addUserSuccessful : "${username} adlı kullanıcı başarılı bir şekilde kayıt edildi! Artık bu kullanıcı üzerinden giriş yapıp bütçenizi yönetebilirsiniz!"
 addUserFailed : "${username} kullanıcısının eklenmesi başarısız!"
+hitYourUsername : "Kullanıcı Adını Gir!"
+saveUsername : "Kullanıcı adımı giriş yaptıktan sonra kaydet"
+createYourOwnAccount : "Hemen oluştur!"
+dontHaveAnAccount : "Hesabınız yok mu?"
+loginPageTitle : "Pebutra, Kişisel bütçe takipçiniz! | Giriş Yap"
 
 # Validation Properties
 val_EmailAddressNotValid : "Girdiğiniz ${emailAddress} geçerli bir e-posta adresi değil."
