FormValidation implemented for validating inputs from user

--- a/conf/languages/lang_tr.yaml
+++ b/conf/languages/lang_tr.yaml
@@ -36,6 +36,7 @@ dontHaveAnAccount : "Hesabınız yok mu?"
 loginPageTitle : "Pebutra, Kişisel bütçe takipçiniz! | Giriş Yap"
 
 # Validation Properties
+val_UsernameNotString : "Girdiğiniz kullanıcı adı bilgisi geçerli bir değer değildir."
 val_EmailAddressNotValid : "Girdiğiniz ${emailAddress} geçerli bir e-posta adresi değil."
 val_EmailAddressEmpty : "e-posta adresiniz boş olamaz."
 val_NameEmpty : "İsminiz boş girilemez."
