--- a/conf/languages/lang_en.yaml
+++ b/conf/languages/lang_en.yaml
@@ -36,11 +36,12 @@ dontHaveAnAccount : "Don't you have an account?"
 loginPageTitle : "Pebutra, Your Personal Budget Tracker! | Login"
 
 # Validation Properties
+val_UsernameNotString : "Username input is not a valid value."
 val_EmailAddressNotValid : "${emailAddress} is not a valid e-mail address."
 val_EmailAddressEmpty : "Your e-mail address cannot be empty."
 val_NameEmpty : "Your name cannot be empty."
 val_PasswordEmpty : "You password cannot be empty"
-val_PasswordLengthLimit : "You password length cannot be less than ${minPasswordLength}"
+val_PasswordLengthLimit : "You password length cannot be less than {{minPasswordLength}}"
 val_SurnameEmpty : "You surname cannot be empty"
 val_UsernameEmpty : "Your username cannot be empty"
 val_UsernameExist : "There exist a user named ${username}"
