Form validation test failure fixed, updated language configuration files

--- a/conf/languages/lang_en.yaml
+++ b/conf/languages/lang_en.yaml
@@ -37,6 +37,7 @@ loginPageTitle : "Pebutra, Your Personal Budget Tracker! | Login"
 
 # Validation Properties
 val_UsernameNotString : "Username input is not a valid value."
+val_PasswordNotString : "Password input is not a valid value."
 val_EmailAddressNotValid : "${emailAddress} is not a valid e-mail address."
 val_EmailAddressEmpty : "Your e-mail address cannot be empty."
 val_NameEmpty : "Your name cannot be empty."
