--- a/conf/languages/lang_en.yaml
+++ b/conf/languages/lang_en.yaml
@@ -36,15 +36,17 @@ dontHaveAnAccount : "Don't you have an account?"
 loginPageTitle : "Pebutra, Your Personal Budget Tracker! | Login"
 
 # Validation Properties
-val_UsernameNotString : "Username input is not a valid value."
-val_PasswordNotString : "Password input is not a valid value."
-val_EmailAddressNotValid : "${emailAddress} is not a valid e-mail address."
-val_EmailAddressEmpty : "Your e-mail address cannot be empty."
-val_NameEmpty : "Your name cannot be empty."
-val_PasswordEmpty : "You password cannot be empty"
-val_PasswordLengthLimit : "Your password length cannot be less than ${minPasswordLength}"
-val_SurnameEmpty : "You surname cannot be empty"
-val_UsernameEmpty : "Your username cannot be empty"
-val_UsernameExist : "There exist a user named ${username}"
-val_UsernameSpecialCharacters : "Your username can only contain letters and numbers"
-val_AddUserFailedDescription : "There are validation errors in the user form."
+validation:
+  login:
+    passwordLengthLimit : "Your password length cannot be less than ${minPasswordLength}"
+    usernameEmpty : "Your username cannot be empty"
+    loginFailed : "Login failed! Please make sure you provided valid username and password."
+    loginFailedTitle : "Login Failed"
+  
+  val_emailAddressNotValid : "${emailAddress} is not a valid e-mail address."
+  val_EmailAddressEmpty : "Your e-mail address cannot be empty."
+  val_NameEmpty : "Your name cannot be empty."
+  val_SurnameEmpty : "You surname cannot be empty"
+  val_UsernameExist : "There exist a user named ${username}"
+  val_UsernameSpecialCharacters : "Your username can only contain letters and numbers"
+  val_AddUserFailedDescription : "There are validation errors in the user form."
