--- a/conf/languages/lang_tr.yaml
+++ b/conf/languages/lang_tr.yaml
@@ -36,15 +36,18 @@ dontHaveAnAccount : "Hesabınız yok mu?"
 loginPageTitle : "Pebutra, Kişisel bütçe takipçiniz! | Giriş Yap"
 
 # Validation Properties
-val_UsernameNotString : "Girdiğiniz kullanıcı adı bilgisi geçerli bir değer değildir."
-val_PasswordNotString : "Girdiğiniz parola bilgisi geçerli bir değer değildir."
+validation:
+  login:
+    passwordLengthLimit : "Şifrenizin uzunluğu ${minPasswordLength} den küçük olamaz."
+    usernameEmpty : "Your username cannot be empty"
+    loginFailed : "Giriş başarısız. Lütfen kullanıcı adı ve şifreyi doğru girdiğinizden emin olunuz."
+    loginFailedTitle : "Giriş başarısız!"
+
 val_EmailAddressNotValid : "Girdiğiniz ${emailAddress} geçerli bir e-posta adresi değil."
 val_EmailAddressEmpty : "e-posta adresiniz boş olamaz."
 val_NameEmpty : "İsminiz boş girilemez."
 val_PasswordEmpty : "Boş şifre girilemez"
-val_PasswordLengthLimit : "Şifrenizin uzunluğu ${minPasswordLength} den küçük olamaz."
 val_SurnameEmpty : "Soyadınız boş girilemez."
-val_UsernameEmpty : "Kullanıcı Adınız boş girilemez."
 val_UsernameExist : "Sistemde kayıtlı halihazırda ${username} kullanıcısı var."
 val_UsernameSpecialCharacters : "Kullanıcı adınız sadece harf ve rakamlardan oluşabilir."
 val_AddUserFailedDescription : "Girdiğiniz bilgilerde hata(lar) mevcut."
