--- a/conf/languages/lang_tr.yaml
+++ b/conf/languages/lang_tr.yaml
@@ -16,6 +16,7 @@ version : "Sürüm"
 addIncomeOutcome : "Gelir/Gider Ekle"
 username : "Kullanıcı Adı"
 password : "Parola"
+passwordConfirm: "Parolanızı tekrar giriniz"
 name: "İsim"
 surname : "Soyisim"
 emailAddress : "E-posta Addresi"
@@ -25,15 +26,17 @@ pebutraInfo : "{{year}}, Pebutra {{creator}} tarafından geliştirildi. | Sürü
 login : "Giriş Yap"
 unableToLogin : "Giriş Başarısız! Kullanıcı Adı veya Parola yanlış."
 forgotMyPassword : "Şifremi Unuttum"
-addUser : "Kullanıcı Ekle"
-addUserDescription : "Bütçenizin yönetimi için Pebutra sizden bir hesap oluşturmanızı ister. Hesabınızı oluşturarak hemen bütcenizi yönetmeye başlayabilirsiniz!"
-addUserSuccessful : "${username} adlı kullanıcı başarılı bir şekilde kayıt edildi! Artık bu kullanıcı üzerinden giriş yapıp bütçenizi yönetebilirsiniz!"
-addUserFailed : "${username} kullanıcısının eklenmesi başarısız!"
 hitYourUsername : "Kullanıcı Adını Gir!"
 saveUsername : "Kullanıcı adımı giriş yaptıktan sonra kaydet"
 createYourOwnAccount : "Hemen oluştur!"
 dontHaveAnAccount : "Hesabınız yok mu?"
 loginPageTitle : "Pebutra, Kişisel bütçe takipçiniz! | Giriş Yap"
+
+#Add User Properties
+addUser : "Kullanıcı Ekle"
+addUserDescription : "Bütçenizin yönetimi için Pebutra sizden bir hesap oluşturmanızı ister. Hesabınızı oluşturarak hemen bütcenizi yönetmeye başlayabilirsiniz!"
+addUserSuccessful : "${username} adlı kullanıcı başarılı bir şekilde kayıt edildi! Artık bu kullanıcı üzerinden giriş yapıp bütçenizi yönetebilirsiniz!"
+addUserFailed : "${username} kullanıcısının eklenmesi başarısız!"
 
 # Validation Properties
 validation:
@@ -43,11 +46,13 @@ validation:
     loginFailed : "Giriş başarısız. Lütfen kullanıcı adı ve şifreyi doğru girdiğinizden emin olunuz."
     loginFailedTitle : "Giriş başarısız!"
 
-val_EmailAddressNotValid : "Girdiğiniz ${emailAddress} geçerli bir e-posta adresi değil."
-val_EmailAddressEmpty : "e-posta adresiniz boş olamaz."
-val_NameEmpty : "İsminiz boş girilemez."
-val_PasswordEmpty : "Boş şifre girilemez"
-val_SurnameEmpty : "Soyadınız boş girilemez."
-val_UsernameExist : "Sistemde kayıtlı halihazırda ${username} kullanıcısı var."
-val_UsernameSpecialCharacters : "Kullanıcı adınız sadece harf ve rakamlardan oluşabilir."
-val_AddUserFailedDescription : "Girdiğiniz bilgilerde hata(lar) mevcut."
+  addUser:
+    emailAddressNotValid : "Girdiğiniz ${emailAddress} geçerli bir e-posta adresi değil."
+    emailAddressEmpty : "e-posta adresiniz boş olamaz."
+    nameEmpty : "İsminiz boş girilemez."
+    passwordEmpty : "Boş şifre girilemez"
+    surnameEmpty : "Soyadınız boş girilemez."
+    usernameExist : "Sistemde kayıtlı halihazırda ${username} kullanıcısı var."
+    usernameSpecialCharacters : "Kullanıcı adınız sadece harf rakamlar ve .[nokta]'dan oluşabilir."
+    addUserFailedDescription : "Girdiğiniz bilgilerde hata(lar) mevcut."
+    passwordDoesntMatch : "Passwords do not match! Please confirm your password."
